Fix video styling on mobile

--- a/src/components/VideoPost/video-post.module.css
+++ b/src/components/VideoPost/video-post.module.css
@@ -1,6 +1,15 @@
-.youTubePlayer {
+.video {
   display: block;
-  width: 640px;
-  height: 360px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.videoContainer {
+  position: relative;
+  height: 0;
+  padding-top: 56.25%;
   background-color: black;
 }
